check how the real post looks like

--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "dark" # "default" # "air", "aqua", "contrast", "dark
 locale                   : "en-US"
 title                    : "Private reality"
 title_separator          : "-"
-subtitle                 : "Tips and trick for jumpng the realities"
+subtitle                 : "Tips and trick for jumping the realities (AR, VR, XR)"
 name                     : "Linas Ozeraitis"
-description              : "An amazing website."
+description              : "Private blog about my engineering journey into the mixed reality."
 url                      : "https://apprentice.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -113,7 +113,10 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
-    - label: "Website"
+    - label: "Apprentice.io"
+      icon: "fas fa-fw fa-link"
+      url: "https://apprentice.io"
+    - label: "Private website"
       icon: "fas fa-fw fa-link"
       url: "https://12brolls.com"
     - label: "Twitter"
