change config to site url pointing to my github user

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : "Tips and trick for jumping the realities (AR, VR, XR)"
 name                     : "Linas Ozeraitis"
 description              : "Private blog about my engineering journey into the mixed reality."
-url                      : "https://apprentice.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://virbas.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
