--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-C5PV528T3M"
     anonymize_ip         : # true, false (default)
